--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="img/shortcut32x32.jpg">
     <title>SURF CLUB</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -15,7 +15,7 @@
     <header class="container-fluid">
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">SURF CLUB </a>
+                <a class="navbar-brand navbar__sizemod" href="#">SURF CLUB </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,18 +26,8 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Nosotros</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contacto</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Ubicacion</a>
-                            </li>
+                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Productos</a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
@@ -50,6 +40,8 @@
                                     <li><a class="dropdown-item" href="#">Y mas...</a></li>
                                 </ul>
                             </li>
+                            <li class="nav-item"><a class="nav-link" href="#">Ubicacion</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                         </ul>
                         <form class="d-flex mt-3" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -59,39 +51,45 @@
                 </div>
             </div>
         </nav>
-        <div class="container-fluid video-container ">
-            <video src="img/video/5380cf9c333b42b686d1dbc52edd943e (1).mov" autoplay muted loop poster="" class=""></video>                                        
-        </div>
     </header>
-    <section class="row" >
-        <div class="col-8" style="background-color: red">
-            <img src="img/logoTablasX.jpg" class="img-fluid" alt="">
+    <div class="video-container">
+        <video src="img/video/5380cf9c333b42b686d1dbc52edd943e (1).mov" autoplay muted loop class=""></video>                                        
+    </div>
+    <section class="container">
+        <div class="row">
+            <div class="col-12">
+                <p class="container__text">SURFEAMOS LA NIEVE, EL AGUA Y EL ASFALTO . . .</p>
+            </div>
         </div>
-        <div class="col-4" style="background-color: yellow">
-            <p>Lorem ipsum dolor sit amet consectetur, adipis</p>
+        <div class="row" >
+            <div class="col-4 centerimg" >
+                <img src="img/logosnowTRAINER450x450.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-4 centerimg" >
+                <img src="img/logosurfTRAINER450x450.jpg" class="img-fluid" alt="">
+            </div>
+            <div class="col-4 centerimg" >
+                <img src="img/logokiteTRAINER450x450.jpg" class="img-fluid" alt="">
+            </div>
         </div>
     </section>
-    <section class="row" >
-        <div class="col-4" style="background-color: greenyellow">
-            <p>Lorem ipsum dolor sit amet consectetur, adipis</p>
-        </div>
-        <div class="col-8" style="background-color: green">
-            <img src="img/logoTablasX.jpg" class="img-fluid" alt="">
-        </div>
-    </section>
+
+
+
+
 
 
 
     <footer>
         <div>
             <div>
-
+                FB IG MAIL HOME
             </div>
             <div>
-
+                NOSOTROS - TERMINOS Y CONDICIONES - CONTACTO
             </div>
             <div>
-
+                <p>TODOS LOS DERECHOS RESERVADOS -LLB- 2022</p>
             </div>
         </div>
     </footer>
