--- a/pages/productos.html
+++ b/pages/productos.html
@@ -16,7 +16,7 @@
     <header class="container-fluid">
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand navbar__sizemod wow animate__animated animate__flash" href="#">SURF CLUB </a>
+                <a class="navbar-brand navbar__sizemod wow animate__animated animate__flash" href="../index.html">SURF CLUB </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
