--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -38,7 +38,7 @@
                                     <li><a class="dropdown-item" href="productos.html">Destapabirra</a></li>
                                     <li><a class="dropdown-item" href="productos.html">Llaveros</a></li>
                                     <li><hr class="dropdown-divider"></li>
-                                    <li><a class="dropdown-item" href="#">Y mas...</a></li>
+                                    <li><a class="dropdown-item" href="productos.html">Y mas...</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item"><a class="nav-link" href="ubicacion.html">Ubicacion</a></li>
