creando segundo html responsive con grid y medias - backup antes de rama nosotros__grid

--- a/index.html
+++ b/index.html
@@ -165,26 +165,26 @@
                 <div class="col-6 col-md-2 mb-3">
                 <h5 class="footer__tittle--mod">Interés</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="https://es.snow-forecast.com/resorts/Cerro-Castor/6day/mid" class="nav-link p-1 text-muted">Snow</a></li>
-                    <li class="nav-item mb-2"><a href="https://es.surf-forecast.com/breaks/Mariano" class="nav-link p-1 text-muted">Swell</a></li>
-                    <li class="nav-item mb-2"><a href="http://www.hidro.gov.ar/oceanografia/pronostico.asp" class="nav-link p-1 text-muted">Tides</a></li>
-                    <li class="nav-item mb-2"><a href="https://www.smn.gob.ar/" class="nav-link p-1 text-muted">Weather</a></li>
-                    <li class="nav-item mb-2"><a href="https://www.windguru.cz/75752" class="nav-link p-1 text-muted">Wind</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://es.snow-forecast.com/resorts/Cerro-Castor/6day/mid" class="nav-link p-1 text-muted">Snow</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://es.surf-forecast.com/breaks/Mariano" class="nav-link p-1 text-muted">Swell</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="http://www.hidro.gov.ar/oceanografia/pronostico.asp" class="nav-link p-1 text-muted">Tides</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://www.smn.gob.ar/" class="nav-link p-1 text-muted">Weather</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://www.windguru.cz/75752" class="nav-link p-1 text-muted">Wind</a></li>
                 </ul>
                 </div>
                 <div class="col-6 col-md-2 mb-3">
                 <h5 class="footer__tittle--mod">Ayuda</h5>
                 <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="https://billabongargentina.zendesk.com/hc/es-419/sections/360008749671-Env%C3%ADos" class="nav-link p-1 text-muted">Información de envíos </a></li>
-                    <li class="nav-item mb-2"><a href="https://www.ripcurlargentina.com/preguntas_frecuentes.html" class="nav-link p-1 text-muted">Preguntas frecuentes</a></li>
-                    <li class="nav-item mb-2"><a href="https://policies.google.com/privacy?hl=es" class="nav-link p-1 text-muted">Politica de privacidad</a></li>
-                    <li class="nav-item mb-2"><a href="https://www.billabong.com.ar/politicas-de-devolucion-y-reembolsos/" class="nav-link p-1 text-muted">Devolución y Reembolso</a></li>
-                    <li class="nav-item mb-2"><a href="https://www.cristobalcolon.com/terminos_y_condiciones.html" class="nav-link p-1 text-muted">Términos y condiciones</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://billabongargentina.zendesk.com/hc/es-419/sections/360008749671-Env%C3%ADos" class="nav-link p-1 text-muted">Información de envíos </a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://www.ripcurlargentina.com/preguntas_frecuentes.html" class="nav-link p-1 text-muted">Preguntas frecuentes</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://policies.google.com/privacy?hl=es" class="nav-link p-1 text-muted">Politica de privacidad</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://www.billabong.com.ar/politicas-de-devolucion-y-reembolsos/" class="nav-link p-1 text-muted">Devolución y Reembolso</a></li>
+                    <li class="nav-item mb-2"><a Target="_blank" href="https://www.cristobalcolon.com/terminos_y_condiciones.html" class="nav-link p-1 text-muted">Términos y condiciones</a></li>
                 </ul>
                 </div>
                 <div class="col-md-5 offset-md-1 mb-3">
                 <form>
-                    <h5 class="footer__tittle--mod">Suscripción  Newsletter</h5>
+                    <h5 class="footer__tittle--mod">Suscripción  Newsletter</h5>Target="_blank" 
                     <p>Resumen mensual de lo que es nuevo y emocionante de nosotros.</p>
                     <div class="d-flex flex-column flex-sm-row w-100 gap-2">
                     <label for="newsletter1" class="visually-hidden">Email address</label>
@@ -198,16 +198,16 @@
                 <p>© 2022 Company, Inc. All rights reserved.</p>
                 <ul class="list-unstyled d-flex">
                     <li class="ms-3">
-                        <a class="link-dark" href="https://www.instagram.com/surfclub.arg/">
+                        <a class="link-dark" Target="_blank" href="https://www.instagram.com/surfclub.arg/">
                             <img src="img/ig4.png" class="footer__redes" alt="">
                         </a>
                         <li class="ms-3">
-                            <a class="link-dark" href="https://www.facebook.com/">
+                            <a class="link-dark" Target="_blank" href="https://www.facebook.com/">
                                 <img src="img/fb4.png" class="footer__redes" alt="">
                             </a>
                         </li>
                         <li class="ms-3">
-                            <a class="link-dark" href="https://www.twitter.com">
+                            <a class="link-dark" Target="_blank" href="https://www.twitter.com">
                                 <img src="img/twitter4.png" class="footer__redes" alt="">
                             </a>
                         </li>
