grid sale bien - faltan las medias para responsive manualmente

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -54,33 +54,31 @@
         </nav>
     </header>
 
-    <main class="">
-        <section class="grid">
-            <div class="grid__portada">
-                <img src="../img/folletosurfclub.JPG" class="portada article__img" alt="folleto">
+    <main >
+        <section class="grid ">
+            <div class="grid__portada wow animate__animated animate__backInLeft">
+                <img src="../img/tabla-horizontal.jpg" class=" article__img" alt="tablasurf2">
             </div>
-            <article class="grid__article1">
-                <h2>Sobre nosotros</h2>
-                <p>Somos una empresa nacida en Argentina, mas bien de  Buenos Aires, destinada a  fabricar tablas de equilibrio, porta tablas, rampas de skate. Desde 2017 fabricando las mejores balance board, totalmente simetricas, mucho style en sus colores, madera de la mejor calidad. </p>
-                <img src="../img/tabla-horizontal.jpg" class="article__img" alt="tablasurf2">
-            </article>
+            <div class="grid__article1  ">
+                <h2 class="grid__article--title" >Sobre nosotros</h2>
+                <p class="grid__article--text">Somos una empresa Argentina, mas bien de  Buenos Aires, destinada a  fabricar tablas de equilibrio, porta tablas, rampas de skate. Desde 2017 fabricando las mejores balance board, totalmente simetricas, mucho style en sus colores, madera de la mejor calidad. </p>
+                <img src="../img/folletosurfclub.JPG" class="article__img" alt="folleto">
+            </div>
             <article class="grid__article2">
-                <h2>Nuestro taller</h2>
-                <p>Todas nuestros productos son cortados a pulso, ,con una alta presicion y experiencia en el rubro. En nuestro taller todo pasa por un tratamiento para que duren nuestros productos al maximo.</p>
-                <img src="../img/fotos-pesadas/taller.jpg" class="article__img" alt="fototaller">
-                <img src="../img/tablahorizontalx2.jpg" class="article__img" alt="tablasurf" >
+                <h2 class="grid__article--title">Nuestro taller</h2>
+                <p class="grid__article--text">Todas nuestros productos son cortados a pulso, ,con una alta presicion y experiencia en el rubro. En nuestro taller todo pasa por un tratamiento para que duren nuestros productos al maximo.</p>
+                <img src="../img/fotos-pesadas/taller.jpg" class=" article__img" alt="fototaller">
             </article>
-            <aside class="grid__aside">
-                <p class="em grid__aside--textvertical">Fabricadas por riders, para riders.</p>
+            <aside class="grid__aside wow animate__animated animate__rotateInUpLeft">
+                <p class="grid__aside--textvertical"> Fabricadas por riders, para riders  </p> 
             </aside>
+            <div class="divboton ">
+                <a class="divboton__botoncontacto">
+                    PARA MAS<br> INFORMACION <br>CLICK ACA
+                </a>
+            </div>
         </section>
-        <hr>
-        <div class="divboton">
-            <a class="divboton__botoncontacto">
-                Para mas informacion ponete en contacto con nosotros aca. 
-            </a>
-        </div>
-        <hr>
+
         <section>
             <div class="row" >
                 <div class="col-sm-4 col-xs-12 centerimg wow animate__animated animate__zoomIn" >
