Todas las paginas presentables - 2 responsive con boostrap y una respo con grid flex

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -62,18 +62,18 @@
             <div class="grid__article1  ">
                 <h2 class="grid__article--title" >Sobre nosotros</h2>
                 <p class="grid__article--text">Somos una empresa Argentina, mas bien de  Buenos Aires, destinada a  fabricar tablas de equilibrio, porta tablas, rampas de skate. Desde 2017 fabricando las mejores balance board, totalmente simetricas, mucho style en sus colores, madera de la mejor calidad. </p>
-                <img src="../img/folletosurfclub.JPG" class="article__img" alt="folleto">
+                <img src="../img/folletosurfclub.JPG" class="wow animate__animated animate__pulse shadowimg article__img" alt="folleto">
             </div>
             <article class="grid__article2">
                 <h2 class="grid__article--title">Nuestro taller</h2>
                 <p class="grid__article--text">Todas nuestros productos son cortados a pulso, ,con una alta presicion y experiencia en el rubro. En nuestro taller todo pasa por un tratamiento para que duren nuestros productos al maximo.</p>
-                <img src="../img/fotos-pesadas/taller.jpg" class=" article__img" alt="fototaller">
+                <img src="../img/fotos-pesadas/taller.jpg" class=" wow animate__animated animate__pulse shadowimg article__img" alt="fototaller">
             </article>
             <aside class="grid__aside wow animate__animated animate__rotateInUpLeft">
                 <p class="grid__aside--textvertical"> Fabricadas por riders, para riders  </p> 
             </aside>
-            <div class="divboton ">
-                <a class="divboton__botoncontacto">
+            <div class="divboton animate__zoomInUp animate__animated wow">
+                <a href="contacto.html" class="divboton__botoncontacto ">
                     PARA MAS<br> INFORMACION <br>CLICK ACA
                 </a>
             </div>
